--- a/app.html
+++ b/app.html
@@ -37,11 +37,72 @@
     </header>
 
     <main>
-        <section class="container margin-auto">
+        <section class="container margin-auto list-page">
             <div class="title-page">
                 <h1 class="h1 title-margin">Mis listas de tareas</h1>
                 <p class="subtitle">¡Mantené tus to-dos ordenados agrupándolos por listas!</p>
                 <p class="subtitle">Podés crear todas las que necesites.</p>
+            </div>
+
+            <div class="lists-container">
+                <div class="list">
+                    <p class="list-type">Personal</p>
+                    <div class="list-content">
+                        <h2 class="h3 list-title">Mis deberes</h2>
+                        <p class="paragraph text-light list-description">Esta es una descripción de la lista, por
+                            ejemplo, acá voy a poner mis tareas pendientes.
+                        </p>
+                    </div>
+                    <p class="list-task-count bold-paragraph text-dark">3/7</p>
+                </div>
+
+                <div class="list">
+                    <p class="list-type">Ocio</p>
+                    <div class="list-content">
+                        <h2 class="h3 list-title">Películas para ver algún día cuando este sola y</h2>
+                        <p class="paragraph text-light list-description">Películas que me gustaría ver en algún momento.
+                        </p>
+                    </div>
+                    <p class="list-task-count bold-paragraph text-dark">3/7</p>
+                </div>
+
+                <div class="list">
+                    <p class="list-type">Ocio</p>
+                    <div class="list-content">
+                        <h2 class="h3 list-title">Películas para ver algún día cuando este sola y</h2>
+                        <p class="paragraph text-light list-description">Películas que me gustaría ver en algún momento.
+                        </p>
+                    </div>
+                    <p class="list-task-count bold-paragraph text-dark">3/7</p>
+                </div>
+
+                <div class="list">
+                    <p class="list-type">Ocio</p>
+                    <div class="list-content">
+                        <h2 class="h3 list-title">Películas para ver algún día cuando este sola y</h2>
+                        <p class="paragraph text-light list-description">Películas que me gustaría ver en algún momento.
+                        </p>
+                    </div>
+                    <p class="list-task-count bold-paragraph text-dark">3/7</p>
+                </div>
+
+                <div class="list">
+                    <p class="list-type">Ocio</p>
+                    <div class="list-content">
+                        <h2 class="h3 list-title">Películas para ver algún día cuando este sola y</h2>
+                        <p class="paragraph text-light list-description">Películas que me gustaría ver en algún momento.
+                        </p>
+                    </div>
+                    <p class="list-task-count bold-paragraph text-dark">3/7</p>
+                </div>
+
+                <div class="add-list">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none" viewbox="0 0 48 48">
+                        <path fill="#949BA3"
+                            d="M38 22H26V10a2 2 0 1 0-4 0v12H10a2 2 0 1 0 0 4h12v12a2 2 0 0 0 4 0V26h12a2 2 0 0 0 0-4Z" />
+                        </svg>
+                    <p>Agregar una nueva lista</p>
+                </div>
             </div>
 
 
