--- a/app.html
+++ b/app.html
@@ -46,7 +46,7 @@
 
             <div class="lists-container">
                 <button class="list">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewbox="0 0 48 48"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewbox="0 0 48 48"
                         class="delete-list">
                         <path fill="#949BA3"
                             d="M10.742 13.543c-.686 0-1.242.634-1.242 1.413 0 .78.556 1.413 1.24 1.413h26.518c.686 0 1.242-.633 1.242-1.413s-.556-1.413-1.244-1.413h-4.14c-.854-.024-1.756-.642-2.046-1.554l-.049-.161-.183-.63-.007-.021c-.111-.38-.209-.71-.345-1.006-.543-1.19-1.553-2.017-2.718-2.228-.294-.053-.607-.053-.966-.053h-5.604c-.357 0-.67 0-.966.053-1.165.211-2.174 1.038-2.718 2.228-.138.3-.236.635-.347 1.018l-.003.009-.185.63-.049.16c-.29.913-1.042 1.53-1.894 1.555h-4.294Z" />
@@ -65,7 +65,7 @@
                 </button>
 
                 <button class="list">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewbox="0 0 48 48"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewbox="0 0 48 48"
                         class="delete-list">
                         <path fill="#949BA3"
                             d="M10.742 13.543c-.686 0-1.242.634-1.242 1.413 0 .78.556 1.413 1.24 1.413h26.518c.686 0 1.242-.633 1.242-1.413s-.556-1.413-1.244-1.413h-4.14c-.854-.024-1.756-.642-2.046-1.554l-.049-.161-.183-.63-.007-.021c-.111-.38-.209-.71-.345-1.006-.543-1.19-1.553-2.017-2.718-2.228-.294-.053-.607-.053-.966-.053h-5.604c-.357 0-.67 0-.966.053-1.165.211-2.174 1.038-2.718 2.228-.138.3-.236.635-.347 1.018l-.003.009-.185.63-.049.16c-.29.913-1.042 1.53-1.894 1.555h-4.294Z" />
@@ -83,7 +83,7 @@
                 </button>
 
                 <button class="list">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewbox="0 0 48 48"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewbox="0 0 48 48"
                         class="delete-list">
                         <path fill="#949BA3"
                             d="M10.742 13.543c-.686 0-1.242.634-1.242 1.413 0 .78.556 1.413 1.24 1.413h26.518c.686 0 1.242-.633 1.242-1.413s-.556-1.413-1.244-1.413h-4.14c-.854-.024-1.756-.642-2.046-1.554l-.049-.161-.183-.63-.007-.021c-.111-.38-.209-.71-.345-1.006-.543-1.19-1.553-2.017-2.718-2.228-.294-.053-.607-.053-.966-.053h-5.604c-.357 0-.67 0-.966.053-1.165.211-2.174 1.038-2.718 2.228-.138.3-.236.635-.347 1.018l-.003.009-.185.63-.049.16c-.29.913-1.042 1.53-1.894 1.555h-4.294Z" />
@@ -101,7 +101,7 @@
                 </button>
 
                 <button class="list">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewbox="0 0 48 48"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewbox="0 0 48 48"
                         class="delete-list">
                         <path fill="#949BA3"
                             d="M10.742 13.543c-.686 0-1.242.634-1.242 1.413 0 .78.556 1.413 1.24 1.413h26.518c.686 0 1.242-.633 1.242-1.413s-.556-1.413-1.244-1.413h-4.14c-.854-.024-1.756-.642-2.046-1.554l-.049-.161-.183-.63-.007-.021c-.111-.38-.209-.71-.345-1.006-.543-1.19-1.553-2.017-2.718-2.228-.294-.053-.607-.053-.966-.053h-5.604c-.357 0-.67 0-.966.053-1.165.211-2.174 1.038-2.718 2.228-.138.3-.236.635-.347 1.018l-.003.009-.185.63-.049.16c-.29.913-1.042 1.53-1.894 1.555h-4.294Z" />
@@ -119,7 +119,7 @@
                 </button>
 
                 <button class="list">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewbox="0 0 48 48"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="none" viewbox="0 0 48 48"
                         class="delete-list">
                         <path fill="#949BA3"
                             d="M10.742 13.543c-.686 0-1.242.634-1.242 1.413 0 .78.556 1.413 1.24 1.413h26.518c.686 0 1.242-.633 1.242-1.413s-.556-1.413-1.244-1.413h-4.14c-.854-.024-1.756-.642-2.046-1.554l-.049-.161-.183-.63-.007-.021c-.111-.38-.209-.71-.345-1.006-.543-1.19-1.553-2.017-2.718-2.228-.294-.053-.607-.053-.966-.053h-5.604c-.357 0-.67 0-.966.053-1.165.211-2.174 1.038-2.718 2.228-.138.3-.236.635-.347 1.018l-.003.009-.185.63-.049.16c-.29.913-1.042 1.53-1.894 1.555h-4.294Z" />
@@ -145,8 +145,52 @@
                 </button>
             </div>
 
-
         </section>
+
+        <!--Ventana modal (agregar nueva lista de tareas)-->
+        <div class="bg-modal">
+            <section class="modal">
+                <h2 class="h2">Crear una nueva <span class="text-primary">lista de tareas</span></h2>
+
+                <form action="#">
+                    <div class="formControl-name">
+                        <label for="name">Nombre</label>
+                        <input type="text" id="name" name="name" maxlength="60" placeholder="Lista de..." required />
+                    </div>
+
+
+                    <div class="formControl-description">
+                        <label for="description">Descripción</label>
+                        <textarea rows="5" maxlength="80" id="description" name="description"
+                            placeholder="Esta va a ser mi lista para..."></textarea>
+                        <p>Máximo 80 caracteres</p>
+                    </div>
+
+                    <div class="formControl-type"> 
+                        <p>Tipo</p>
+
+                        <input type="radio" id="personal" name="type" value="Personal" />
+                        <label for="personal">Personal</label>
+
+                        <input type="radio" id="ocio" name="type" value="Ocio" />
+                        <label for="ocio">Ocio</label>
+
+                        <input type="radio" id="estudios" name="type" value="Estudios" />
+                        <label for="estudios">Estudios</label>
+
+                        <input type="radio" id="trabajo" name="type" value="Trabajo" />
+                        <label for="trabajo">Trabajo</label>
+
+                        <input type="radio" id="otro" name="type" value="Otro" required checked />
+                        <label for="otro">Otro</label>
+                    </div>
+
+                    <input type="submit" value="Crear lista" class="nav-links main-cta primary text-white margin-auto">
+
+                </form>
+
+            </section>
+        </div>
     </main>
 
     <footer class="container">
