--- a/app.html
+++ b/app.html
@@ -152,37 +152,51 @@
             <section class="modal">
                 <h2 class="h2">Crear una nueva <span class="text-primary">lista de tareas</span></h2>
 
-                <form action="#">
+                <form action="#" id="addListForm">
                     <div class="formControl-name">
-                        <label for="name">Nombre</label>
-                        <input type="text" id="name" name="name" maxlength="60" placeholder="Lista de..." required />
+                        <label for="name" class="bold-paragraph text-title formLabel">Nombre</label>
+                        <input type="text" id="name" name="name" maxlength="60" placeholder="Lista de..." class="input-text" required/>
                     </div>
 
 
                     <div class="formControl-description">
-                        <label for="description">Descripción</label>
+                        <label for="description" class="bold-paragraph text-title formLabel">Descripción</label>
                         <textarea rows="5" maxlength="80" id="description" name="description"
-                            placeholder="Esta va a ser mi lista para..."></textarea>
-                        <p>Máximo 80 caracteres</p>
+                            placeholder="Esta va a ser mi lista para..." class="input-text"></textarea>
+                        <p class="feedback-text">Máximo 80 caracteres.</p>
                     </div>
 
-                    <div class="formControl-type"> 
-                        <p>Tipo</p>
+                    <div class="formControl-type">
+                        <p class="bold-paragraph text-title formLabel">Tipo</p>
 
-                        <input type="radio" id="personal" name="type" value="Personal" />
-                        <label for="personal">Personal</label>
+                        <div class="containerRadioButtons">
 
-                        <input type="radio" id="ocio" name="type" value="Ocio" />
-                        <label for="ocio">Ocio</label>
+                            <div class="radioButton">
+                                <input type="radio" id="personal" name="type" value="Personal" />
+                                <label for="personal" class="label-radioButton"><span class="custom-radioButton"></span>Personal</label>
+                            </div>
 
-                        <input type="radio" id="estudios" name="type" value="Estudios" />
-                        <label for="estudios">Estudios</label>
+                            <div class="radioButton">
+                                <input type="radio" id="ocio" name="type" value="Ocio" />
+                                <label for="ocio" class="label-radioButton"><span class="custom-radioButton"></span>Ocio</label>
+                            </div>
 
-                        <input type="radio" id="trabajo" name="type" value="Trabajo" />
-                        <label for="trabajo">Trabajo</label>
+                            <div class="radioButton">
+                                <input type="radio" id="estudios" name="type" value="Estudios" />
+                                <label for="estudios" class="label-radioButton"><span class="custom-radioButton"></span>Estudios</label>
+                            </div>
 
-                        <input type="radio" id="otro" name="type" value="Otro" required checked />
-                        <label for="otro">Otro</label>
+                            <div class="radioButton">
+                                <input type="radio" id="trabajo" name="type" value="Trabajo" />
+                                <label for="trabajo" class="label-radioButton"><span class="custom-radioButton"></span>Trabajo</label>
+                            </div>
+
+                            <div class="radioButton">
+                                <input type="radio" id="otro" name="type" value="Otro" required checked />
+                                <label for="otro" class="label-radioButton"><span class="custom-radioButton"></span>Otro</label>
+                            </div>
+
+                        </div>
                     </div>
 
                     <input type="submit" value="Crear lista" class="nav-links main-cta primary text-white margin-auto">
