--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
                 <a href="index.html" class="nav-links text-primary">To-do</a>
             </div>
 
-            <a href="app.html" class="nav-links text-title">Ir a mis to-dos</a>
+            <div class="nav-link-todo">
+                <a href="app.html" class="nav-links text-title">Ir a mis to-dos</a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewbox="0 0 48 48" class="arrow-svg-right">
+                    <path stroke="#6876F4" stroke-linecap="round" stroke-linejoin="round" stroke-width="6"
+                        d="M25.077 36.5 38 24 25.077 11.5M36.205 24H10" /></svg>
+            </div>
+
         </nav>
     </header>
 
