--- a/html/app.html
+++ b/html/app.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do — Organizá mejor tu día a día</title>
+    <title>To-do App — Mis Listas de Tareas</title>
     <link rel="icon" href="imgs/svg/logo-to-do.svg" />
 
     <!--Fonts-->
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&display=swap" rel="stylesheet">
 
     <!--Custom CSS-->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
     <header>
         <nav class="navbar container">
             <div class="site-logo">
-                <a href="index.html">
+                <a href="../index.html">
                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewbox="0 0 48 48" class="logo-svg">
                         <path class="svg-white"
                             d="M4 24c0-5.586 0-8.379.786-10.624a14 14 0 0 1 8.59-8.59C15.621 4 18.414 4 24 4s8.379 0 10.624.786a14 14 0 0 1 8.59 8.59C44 15.621 44 18.414 44 24s0 8.379-.786 10.624a14 14 0 0 1-8.59 8.59C32.379 44 29.586 44 24 44s-8.379 0-10.624-.786a14 14 0 0 1-8.59-8.59C4 32.379 4 29.586 4 24Z" />
@@ -31,7 +31,7 @@
                             d="m29.087 36.657-2.071-1.932a.618.618 0 0 0-.42-.162.618.618 0 0 0-.422.162.523.523 0 0 0 0 .785l2.495 2.327a.625.625 0 0 0 .842 0l6.315-5.89a.537.537 0 0 0 .174-.392.537.537 0 0 0-.174-.392.618.618 0 0 0-.421-.163.618.618 0 0 0-.42.163l-5.898 5.494Z" />
                     </svg>
                 </a>
-                <a href="index.html" class="nav-links text-primary">To-do</a>
+                <a href="../index.html" class="nav-links text-primary">To-do</a>
             </div>
 
             <div class="nav-link-todo">
@@ -348,7 +348,7 @@
     <footer class="container">
 
         <div class="footer-credits">
-            <a href="index.html">
+            <a href="../index.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewbox="0 0 48 48" class="logo-svg">
                     <path class="svg-white"
                         d="M4 24c0-5.586 0-8.379.786-10.624a14 14 0 0 1 8.59-8.59C15.621 4 18.414 4 24 4s8.379 0 10.624.786a14 14 0 0 1 8.59 8.59C44 15.621 44 18.414 44 24s0 8.379-.786 10.624a14 14 0 0 1-8.59 8.59C32.379 44 29.586 44 24 44s-8.379 0-10.624-.786a14 14 0 0 1-8.59-8.59C4 32.379 4 29.586 4 24Z" />
