--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="nav-link-todo">
-                <a href="app.html" class="nav-links text-title">Ir a mis to-dos</a>
+                <a href="html/app.html" class="nav-links text-title">Ir a mis to-dos</a>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewbox="0 0 48 48" class="arrow-svg-right">
                     <path stroke="#6876F4" stroke-linecap="round" stroke-linejoin="round" stroke-width="6"
                         d="M25.077 36.5 38 24 25.077 11.5M36.205 24H10" /></svg>
@@ -51,7 +51,7 @@
                 <p class="subtitle">La herramienta de gestión de tareas que te ayuda visualmente a sacar lo mejor de tu
                     tiempo y energía
                     diaria</p>
-                <a href="app.html" class="nav-links main-cta primary text-white margin-main-cta">Ir a mis to-dos</a>
+                <a href="html/app.html" class="nav-links main-cta primary text-white margin-main-cta">Ir a mis to-dos</a>
             </div>
 
             <div class="card-features">
