--- a/html/app.html
+++ b/html/app.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do App — Mis Listas de Tareas</title>
-    <link rel="icon" href="imgs/svg/logo-to-do.svg" />
+    <link rel="icon" href="../imgs/svg/logo-to-do.svg" />
 
     <!--Fonts-->
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&display=swap" rel="stylesheet">
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="../css/styles.css">
+
+    <!--Manifest-->
+    <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
