--- a/html/app.html
+++ b/html/app.html
@@ -14,6 +14,9 @@
     <!--Custom CSS-->
     <link rel="stylesheet" href="../css/styles.css">
 
+    <!--JavaScript-->
+    <script src="../js/app.js" defer></script>
+
     <!--Manifest-->
     <link rel="manifest" href="/manifest.json">
 </head>
@@ -278,6 +281,7 @@
                             </div>
                         </div>
                     </div>
+                    
                 </div>
 
         </section>
