--- a/html/app.html
+++ b/html/app.html
@@ -14,11 +14,9 @@
     <!--Custom CSS-->
     <link rel="stylesheet" href="../css/styles.css">
 
-    <!--JavaScript-->
-
-
     <!--Manifest-->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="../manifest.json">
+
 </head>
 
 <body>
