--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <!--Manifest-->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
@@ -151,7 +151,16 @@
 
 
     <!--SERVICE WORKER-->
-    <script src="sw.js"></script>
+    <script>
+                if ("serviceWorker" in navigator) {
+            window.addEventListener("load", function () {
+                navigator.serviceWorker
+                    .register("sw.js")
+                    .then(res => console.log("service worker registered", res))
+                    .catch(err => console.log("service worker not registered", err));
+            });
+        }
+    </script>
 </body>
 
 </html>
