--- a/html/app.html
+++ b/html/app.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do App — Mis Listas de Tareas</title>
+    <title>To-do — Mis listas de tareas</title>
     <link rel="icon" href="../imgs/svg/logo-to-do.svg" />
 
     <!--Fonts-->
@@ -60,125 +60,6 @@
             <div class="main-content" id="dinamic-content">
                 <!--Contenido de la página de listado-->
                 <!--Se trae a través del fetch-->
-
-                <!--Contenido de la página de detalle-->
-                <!--<form action="#" id="addTaskForm">
-                    
-                        <input type="text" id="newTask" name="newTask" placeholder="Agregar una nueva tarea..." required>
-                        <button type="submit">Agregar tarea</button>
-                    </form>
-
-                    <div class="filters-container">
-                        <div class="filters">
-                            <p class="bold-paragraph text-title">Filtrar por:</p>
-                            <button type="button" class="filter-button filter-selected">Estado</button>
-                            <button type="button" class="filter-button">Prioridad</button>
-                        </div>
-                        <p>7 tareas en total</p>
-                    </div>
-
-                    <div class="tasks-container">
-                        <div class="column-tasks">
-
-                            <div class="tasks-info">
-                                <h2 class="h3">Pendientes</h2>
-                                <span class="task-counter">4</span>
-                            </div>
-
-                            <div class="tasks">
-                                <div class="task">
-                                    <input type="checkbox" id="task1">
-                                    <label for="task1"><span class="custom-checkbox"></span>Lavar la ropa</label>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none"
-                                        viewbox="0 0 48 48" class="delete-list delete-list-task">
-                                        <path fill="#949BA3"
-                                            d="M10.742 13.543c-.686 0-1.242.634-1.242 1.413 0 .78.556 1.413 1.24 1.413h26.518c.686 0 1.242-.633 1.242-1.413s-.556-1.413-1.244-1.413h-4.14c-.854-.024-1.756-.642-2.046-1.554l-.049-.161-.183-.63-.007-.021c-.111-.38-.209-.71-.345-1.006-.543-1.19-1.553-2.017-2.718-2.228-.294-.053-.607-.053-.966-.053h-5.604c-.357 0-.67 0-.966.053-1.165.211-2.174 1.038-2.718 2.228-.138.3-.236.635-.347 1.018l-.003.009-.185.63-.049.16c-.29.913-1.042 1.53-1.894 1.555h-4.294Z" />
-                                        <path fill="#949BA3" fill-rule="evenodd"
-                                            d="M24.65 40.112h-1.3c-4.485 0-6.726 0-8.184-1.427-1.457-1.425-1.606-3.766-1.904-8.441l-.43-6.757c-.163-2.54-.244-3.81.488-4.616.73-.805 1.966-.805 4.435-.805h12.49c2.47 0 3.704 0 4.435.805.73.804.65 2.076.488 4.616l-.43 6.756c-.298 4.676-.447 7.015-1.903 8.442-1.46 1.427-3.7 1.427-8.184 1.427Zm-4.797-16.945c.664-.07 1.257.44 1.321 1.139l.806 8.479c.066.7-.418 1.323-1.083 1.392-.664.07-1.257-.44-1.321-1.14l-.806-8.478c-.066-.7.418-1.323 1.083-1.392Zm9.377 1.392c.067-.7-.418-1.323-1.081-1.392-.663-.07-1.259.44-1.323 1.139l-.806 8.479c-.066.7.418 1.323 1.083 1.392.662.07 1.257-.44 1.321-1.14l.806-8.478Z"
-                                            clip-rule="evenodd" />
-                                    </svg>
-                                </div>
-
-                                <div class="task">
-                                    <input type="checkbox" id="task2">
-                                    <label for="task2"><span class="custom-checkbox"></span>Pasear al perro</label>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none"
-                                        viewbox="0 0 48 48" class="delete-list delete-list-task">
-                                        <path fill="#949BA3"
-                                            d="M10.742 13.543c-.686 0-1.242.634-1.242 1.413 0 .78.556 1.413 1.24 1.413h26.518c.686 0 1.242-.633 1.242-1.413s-.556-1.413-1.244-1.413h-4.14c-.854-.024-1.756-.642-2.046-1.554l-.049-.161-.183-.63-.007-.021c-.111-.38-.209-.71-.345-1.006-.543-1.19-1.553-2.017-2.718-2.228-.294-.053-.607-.053-.966-.053h-5.604c-.357 0-.67 0-.966.053-1.165.211-2.174 1.038-2.718 2.228-.138.3-.236.635-.347 1.018l-.003.009-.185.63-.049.16c-.29.913-1.042 1.53-1.894 1.555h-4.294Z" />
-                                        <path fill="#949BA3" fill-rule="evenodd"
-                                            d="M24.65 40.112h-1.3c-4.485 0-6.726 0-8.184-1.427-1.457-1.425-1.606-3.766-1.904-8.441l-.43-6.757c-.163-2.54-.244-3.81.488-4.616.73-.805 1.966-.805 4.435-.805h12.49c2.47 0 3.704 0 4.435.805.73.804.65 2.076.488 4.616l-.43 6.756c-.298 4.676-.447 7.015-1.903 8.442-1.46 1.427-3.7 1.427-8.184 1.427Zm-4.797-16.945c.664-.07 1.257.44 1.321 1.139l.806 8.479c.066.7-.418 1.323-1.083 1.392-.664.07-1.257-.44-1.321-1.14l-.806-8.478c-.066-.7.418-1.323 1.083-1.392Zm9.377 1.392c.067-.7-.418-1.323-1.081-1.392-.663-.07-1.259.44-1.323 1.139l-.806 8.479c-.066.7.418 1.323 1.083 1.392.662.07 1.257-.44 1.321-1.14l.806-8.478Z"
-                                            clip-rule="evenodd" />
-                                    </svg>
-                                </div>
-
-                                <div class="task">
-                                    <input type="checkbox" id="task3">
-                                    <label for="task3"><span class="custom-checkbox"></span>Limpiar mi cuarto</label>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none"
-                                        viewbox="0 0 48 48" class="delete-list delete-list-task">
-                                        <path fill="#949BA3"
-                                            d="M10.742 13.543c-.686 0-1.242.634-1.242 1.413 0 .78.556 1.413 1.24 1.413h26.518c.686 0 1.242-.633 1.242-1.413s-.556-1.413-1.244-1.413h-4.14c-.854-.024-1.756-.642-2.046-1.554l-.049-.161-.183-.63-.007-.021c-.111-.38-.209-.71-.345-1.006-.543-1.19-1.553-2.017-2.718-2.228-.294-.053-.607-.053-.966-.053h-5.604c-.357 0-.67 0-.966.053-1.165.211-2.174 1.038-2.718 2.228-.138.3-.236.635-.347 1.018l-.003.009-.185.63-.049.16c-.29.913-1.042 1.53-1.894 1.555h-4.294Z" />
-                                        <path fill="#949BA3" fill-rule="evenodd"
-                                            d="M24.65 40.112h-1.3c-4.485 0-6.726 0-8.184-1.427-1.457-1.425-1.606-3.766-1.904-8.441l-.43-6.757c-.163-2.54-.244-3.81.488-4.616.73-.805 1.966-.805 4.435-.805h12.49c2.47 0 3.704 0 4.435.805.73.804.65 2.076.488 4.616l-.43 6.756c-.298 4.676-.447 7.015-1.903 8.442-1.46 1.427-3.7 1.427-8.184 1.427Zm-4.797-16.945c.664-.07 1.257.44 1.321 1.139l.806 8.479c.066.7-.418 1.323-1.083 1.392-.664.07-1.257-.44-1.321-1.14l-.806-8.478c-.066-.7.418-1.323 1.083-1.392Zm9.377 1.392c.067-.7-.418-1.323-1.081-1.392-.663-.07-1.259.44-1.323 1.139l-.806 8.479c-.066.7.418 1.323 1.083 1.392.662.07 1.257-.44 1.321-1.14l.806-8.478Z"
-                                            clip-rule="evenodd" />
-                                    </svg>
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="column-tasks">
-
-                            <div class="tasks-info">
-                                <h2 class="h3">Completadas</h2>
-                                <span class="task-counter">3</span>
-                            </div>
-
-                            <div class="tasks">
-                                <div class="task">
-                                    <input type="checkbox" id="task4" checked>
-                                    <label for="task4"><span class="custom-checkbox"></span>Llamar a mamá</label>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none"
-                                        viewbox="0 0 48 48" class="delete-list delete-list-task">
-                                        <path fill="#949BA3"
-                                            d="M10.742 13.543c-.686 0-1.242.634-1.242 1.413 0 .78.556 1.413 1.24 1.413h26.518c.686 0 1.242-.633 1.242-1.413s-.556-1.413-1.244-1.413h-4.14c-.854-.024-1.756-.642-2.046-1.554l-.049-.161-.183-.63-.007-.021c-.111-.38-.209-.71-.345-1.006-.543-1.19-1.553-2.017-2.718-2.228-.294-.053-.607-.053-.966-.053h-5.604c-.357 0-.67 0-.966.053-1.165.211-2.174 1.038-2.718 2.228-.138.3-.236.635-.347 1.018l-.003.009-.185.63-.049.16c-.29.913-1.042 1.53-1.894 1.555h-4.294Z" />
-                                        <path fill="#949BA3" fill-rule="evenodd"
-                                            d="M24.65 40.112h-1.3c-4.485 0-6.726 0-8.184-1.427-1.457-1.425-1.606-3.766-1.904-8.441l-.43-6.757c-.163-2.54-.244-3.81.488-4.616.73-.805 1.966-.805 4.435-.805h12.49c2.47 0 3.704 0 4.435.805.73.804.65 2.076.488 4.616l-.43 6.756c-.298 4.676-.447 7.015-1.903 8.442-1.46 1.427-3.7 1.427-8.184 1.427Zm-4.797-16.945c.664-.07 1.257.44 1.321 1.139l.806 8.479c.066.7-.418 1.323-1.083 1.392-.664.07-1.257-.44-1.321-1.14l-.806-8.478c-.066-.7.418-1.323 1.083-1.392Zm9.377 1.392c.067-.7-.418-1.323-1.081-1.392-.663-.07-1.259.44-1.323 1.139l-.806 8.479c-.066.7.418 1.323 1.083 1.392.662.07 1.257-.44 1.321-1.14l.806-8.478Z"
-                                            clip-rule="evenodd" />
-                                    </svg>
-                                </div>
-
-                                <div class="task">
-                                    <input type="checkbox" id="task5" checked>
-                                    <label for="task5"><span class="custom-checkbox"></span>Comprar leche</label>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none"
-                                        viewbox="0 0 48 48" class="delete-list delete-list-task">
-                                        <path fill="#949BA3"
-                                            d="M10.742 13.543c-.686 0-1.242.634-1.242 1.413 0 .78.556 1.413 1.24 1.413h26.518c.686 0 1.242-.633 1.242-1.413s-.556-1.413-1.244-1.413h-4.14c-.854-.024-1.756-.642-2.046-1.554l-.049-.161-.183-.63-.007-.021c-.111-.38-.209-.71-.345-1.006-.543-1.19-1.553-2.017-2.718-2.228-.294-.053-.607-.053-.966-.053h-5.604c-.357 0-.67 0-.966.053-1.165.211-2.174 1.038-2.718 2.228-.138.3-.236.635-.347 1.018l-.003.009-.185.63-.049.16c-.29.913-1.042 1.53-1.894 1.555h-4.294Z" />
-                                        <path fill="#949BA3" fill-rule="evenodd"
-                                            d="M24.65 40.112h-1.3c-4.485 0-6.726 0-8.184-1.427-1.457-1.425-1.606-3.766-1.904-8.441l-.43-6.757c-.163-2.54-.244-3.81.488-4.616.73-.805 1.966-.805 4.435-.805h12.49c2.47 0 3.704 0 4.435.805.73.804.65 2.076.488 4.616l-.43 6.756c-.298 4.676-.447 7.015-1.903 8.442-1.46 1.427-3.7 1.427-8.184 1.427Zm-4.797-16.945c.664-.07 1.257.44 1.321 1.139l.806 8.479c.066.7-.418 1.323-1.083 1.392-.664.07-1.257-.44-1.321-1.14l-.806-8.478c-.066-.7.418-1.323 1.083-1.392Zm9.377 1.392c.067-.7-.418-1.323-1.081-1.392-.663-.07-1.259.44-1.323 1.139l-.806 8.479c-.066.7.418 1.323 1.083 1.392.662.07 1.257-.44 1.321-1.14l.806-8.478Z"
-                                            clip-rule="evenodd" />
-                                    </svg>
-                                </div>
-
-                                <div class="task">
-                                    <input type="checkbox" id="task6" checked>
-                                    <label for="task6"><span class="custom-checkbox"></span>Arreglar agujero en la cocina
-                                        que gotea</label>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none"
-                                        viewbox="0 0 48 48" class="delete-list delete-list-task">
-                                        <path fill="#949BA3"
-                                            d="M10.742 13.543c-.686 0-1.242.634-1.242 1.413 0 .78.556 1.413 1.24 1.413h26.518c.686 0 1.242-.633 1.242-1.413s-.556-1.413-1.244-1.413h-4.14c-.854-.024-1.756-.642-2.046-1.554l-.049-.161-.183-.63-.007-.021c-.111-.38-.209-.71-.345-1.006-.543-1.19-1.553-2.017-2.718-2.228-.294-.053-.607-.053-.966-.053h-5.604c-.357 0-.67 0-.966.053-1.165.211-2.174 1.038-2.718 2.228-.138.3-.236.635-.347 1.018l-.003.009-.185.63-.049.16c-.29.913-1.042 1.53-1.894 1.555h-4.294Z" />
-                                        <path fill="#949BA3" fill-rule="evenodd"
-                                            d="M24.65 40.112h-1.3c-4.485 0-6.726 0-8.184-1.427-1.457-1.425-1.606-3.766-1.904-8.441l-.43-6.757c-.163-2.54-.244-3.81.488-4.616.73-.805 1.966-.805 4.435-.805h12.49c2.47 0 3.704 0 4.435.805.73.804.65 2.076.488 4.616l-.43 6.756c-.298 4.676-.447 7.015-1.903 8.442-1.46 1.427-3.7 1.427-8.184 1.427Zm-4.797-16.945c.664-.07 1.257.44 1.321 1.139l.806 8.479c.066.7-.418 1.323-1.083 1.392-.664.07-1.257-.44-1.321-1.14l-.806-8.478c-.066-.7.418-1.323 1.083-1.392Zm9.377 1.392c.067-.7-.418-1.323-1.081-1.392-.663-.07-1.259.44-1.323 1.139l-.806 8.479c-.066.7.418 1.323 1.083 1.392.662.07 1.257-.44 1.321-1.14l.806-8.478Z"
-                                            clip-rule="evenodd" />
-                                    </svg>
-                                </div>
-                            </div>
-                        </div>
-                        
-                    </div> -->
 
             </div>
         </section>
