--- a/html/app.html
+++ b/html/app.html
@@ -67,6 +67,12 @@
         <!--Ventana modal (agregar nueva lista de tareas)-->
         <div class="bg-modal" id="bg-modal-newlist">
             <section class="modal">
+                <span class="close-modal" id="close-modal">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="none" viewbox="0 0 48 48">
+                        <path fill="#949BA3" class="close-modal-path"
+                            d="M38 22H26V10a2 2 0 1 0-4 0v12H10a2 2 0 1 0 0 4h12v12a2 2 0 0 0 4 0V26h12a2 2 0 0 0 0-4Z" />
+                    </svg>
+                </span>
                 <h2 class="h2">Crear una nueva <span class="text-primary">lista de tareas</span></h2>
 
                 <form action="#" id="addListForm">
