add new task list

--- a/html/app.html
+++ b/html/app.html
@@ -96,7 +96,7 @@
                         <div class="containerRadioButtons">
 
                             <div class="radioButton">
-                                <input type="radio" id="personal" name="type" value="Personal" />
+                                <input type="radio" id="personal" name="type" value="Personal" required/>
                                 <label for="personal" class="label-radioButton"><span
                                         class="custom-radioButton"></span>Personal</label>
                             </div>
@@ -120,7 +120,7 @@
                             </div>
 
                             <div class="radioButton">
-                                <input type="radio" id="otro" name="type" value="Otro" required checked />
+                                <input type="radio" id="otro" name="type" value="Otro"/>
                                 <label for="otro" class="label-radioButton"><span
                                         class="custom-radioButton"></span>Otro</label>
                             </div>
