--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
 
         <div class="footer-socials">
-            <a href="">
+            <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none" viewbox="0 0 48 48"
                     class="socials-svg">
                     <path fill="#505054"
@@ -130,7 +130,7 @@
                 </svg>
             </a>
 
-            <a href="">
+            <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none" viewbox="0 0 48 48"
                     class="socials-svg">
                     <path fill="#505054"
@@ -138,7 +138,7 @@
                 </svg>
             </a>
 
-            <a href="">
+            <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none" viewbox="0 0 48 48"
                     class="socials-svg">
                     <path fill="#505054"
