--- a/html/app.html
+++ b/html/app.html
@@ -52,7 +52,7 @@
         <section class="container margin-auto app-page">
             <div class="title-page title-margin">
                 <span class="list-type regular-size-text title-margin-bottom show-on-detail" id="list-type">Personal</span>
-                <h1 class="h1 title-margin-bottom" id="main-title">Mis listas de tareas</h1>
+                <h1 class="h1 title-margin-bottom line-height-title" id="main-title">Mis listas de tareas</h1>
                 <p class="subtitle" id="main-subtitle">¡Mantené tus to-dos ordenados agrupándolos por listas! <br>
                     Podés crear todas las que necesites.</p>
             </div>
