creación de nuevos archivos .html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="nav-link-todo">
-                <a href="html/app.html" class="nav-links text-title">Ir a mis to-dos</a>
+                <a href="html/list-page.html" class="nav-links text-title">Ir a mis to-dos</a>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewbox="0 0 48 48"
                     class="arrow-svg-right">
                     <path stroke="#6876F4" stroke-linecap="round" stroke-linejoin="round" stroke-width="6"
@@ -55,7 +55,7 @@
                 <p class="subtitle">La herramienta de gestión de tareas que te ayuda visualmente a sacar lo mejor de tu
                     tiempo y energía
                     diaria</p>
-                <a href="html/app.html" class="nav-links main-cta primary text-white margin-main-cta">Ir a mis
+                <a href="html/list-page.html" class="nav-links main-cta primary text-white margin-main-cta">Ir a mis
                     to-dos</a>
             </div>
 
