--- a/html/add-to-do-list.html
+++ b/html/add-to-do-list.html
@@ -142,7 +142,8 @@
 
     </footer>
     
-    <script src="../js/app.js"></script>
+    <script src="../js/list-page.js"></script>
+    <script src="../js/add-to-do-list.js"></script>
 </body>
 
 </html>
