agregar nueva task list a la base de datos

--- a/html/add-to-do-list.html
+++ b/html/add-to-do-list.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
 
-    <!--Ventana modal (agregar nueva lista de tareas)-->
+    <!--Agregar nueva lista de tareas-->
     <div class="bg-modal" id="bg-modal-newlist">
         <section class="modal">
         
@@ -142,7 +142,6 @@
 
     </footer>
     
-    <script src="../js/list-page.js"></script>
     <script src="../js/add-to-do-list.js"></script>
 </body>
 
