mostrar cards con listas de tareas

--- a/html/add-to-do-list.html
+++ b/html/add-to-do-list.html
@@ -47,7 +47,7 @@
                 <div class="formControl-description">
                     <label for="description" class="bold-paragraph text-title formLabel">Descripción</label>
                     <textarea rows="5" maxlength="100" id="description" name="description"
-                        placeholder="Esta va a ser mi lista para..." class="input-text"></textarea>
+                        placeholder="Esta va a ser mi lista para..." class="input-text" required></textarea>
                     <p class="feedback-text">Máximo 100 caracteres.</p>
                 </div>
 
