--- a/html/list-page.html
+++ b/html/list-page.html
@@ -58,7 +58,7 @@
             </div>
 
             <div class="main-content" id="dinamic-content">
-                <!--Contenido dinámico de la app (JavaScript)-->
+                <!--Listado dinámico de la app-->
             </div>
         </section>
     </main>
