Maquetado: editar y borrar lista

--- a/html/detail-page.html
+++ b/html/detail-page.html
@@ -49,9 +49,9 @@
     <main>
         <section class="container margin-auto app-page">
             <div class="title-page title-margin">
-                <span class="list-type regular-size-text title-margin-bottom" id="list-type">Personal</span>
-                <h1 class="h1 title-margin-bottom line-height-title" id="main-title">Mis tareas pendientes</h1>
-                <p class="subtitle" id="main-subtitle">Esta es una descripción de la lista, por ejemplo, acá voy a poner mis tareas pendientes</p>
+                <span class="list-type regular-size-text title-margin-bottom" id="list-type"></span>
+                <h1 class="h1 title-margin-bottom line-height-title" id="main-title"></h1>
+                <p class="subtitle" id="main-subtitle"></p>
             </div>
 
             <div class="main-content" id="dinamic-content">
@@ -62,8 +62,8 @@
                     
                 <div class="filters-container">
                     <div class="filters">
-                        <p class="bold-paragraph text-title">Filtrar por:</p>
-                        <button type="button" class="filter-button filter-selected">Estado</button>
+                        <button type="button" class="filter-button" id="edit-list">Editar lista</button>
+                        <button type="button" class="filter-button" id="delete-list">Borrar lista</button>
                     </div>
                     <p>3 tareas en total</p>
                 </div>
