función para editar una lista de tareas

--- a/html/edit-to-do-list.html
+++ b/html/edit-to-do-list.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
 
-                <input type="submit" value="Crear lista" class="nav-links main-cta primary text-white margin-auto">
+                <input type="submit" value="Actualizar lista" class="nav-links main-cta primary text-white margin-auto">
 
             </form>
 
