estrategia de cache (final)

--- a/html/list-page.html
+++ b/html/list-page.html
@@ -109,6 +109,7 @@
 
     </footer>
 
+    <script src="../js/almacenamiento.js"></script>
     <script src="../js/list-page.js"></script>
 </body>
 
