almacenamiento (empty & error states )

--- a/html/detail-page.html
+++ b/html/detail-page.html
@@ -143,6 +143,7 @@
 
     </footer>
 
+    <script src="../js/almacenamiento.js"></script>
     <script src="../js/detail-page.js"></script>
 </body>
 </html>
